--- a/InvertirCadena/nbproject/project.properties
+++ b/InvertirCadena/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/InvertirCadenas.jar
+dist.jar=${dist.dir}/InvertirCadena.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/InvertirCadenas
+dist.jlink.output=${dist.jlink.dir}/InvertirCadena
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=InvertirCadenas
+jlink.launcher.name=InvertirCadena
 main.class=invertircadenas.InvertirCadenas
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
