--- a/InvertirCadena/nbproject/project.properties
+++ b/InvertirCadena/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=InvertirCadena
-main.class=invertircadenas.InvertirCadenas
+main.class=invertircadena.InvertirCadena
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
