--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 /InvertirCadenaFichero_1/nbproject/private/
 /FiltroParImpar/nbproject/private/
 /FiltroParImpar/build/
+/ClasificarNumeros/nbproject/private/
+/FiltroPosNeg/nbproject/private/
+/FiltroPosNeg/build/
+/ClasificarNumerosCompleto/nbproject/private/
+/ClasificarNumerosCompleto/build/
+/ClasificarNumeros/build/
+/ContarPalabras/nbproject/private/
+/ClasificaTexto/nbproject/private/
