--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /ClasificarNumeros/build/
 /ContarPalabras/nbproject/private/
 /ClasificaTexto/nbproject/private/
+/P1ComunicandoProcesos/nbproject/private/
