--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /ContarPalabras/nbproject/private/
 /ClasificaTexto/nbproject/private/
 /P1ComunicandoProcesos/nbproject/private/
+/P1ComunicandoProcesos/build/
