--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /ClasificaTexto/nbproject/private/
 /P1ComunicandoProcesos/nbproject/private/
 /P1ComunicandoProcesos/build/
+/TSimulacro/nbproject/private/
