--- a/Tema2/Raton/nbproject/private/private.properties
+++ b/Tema2/Raton/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Claudia\\AppData\\Roaming\\NetBeans\\22\\build.properties
+user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\20\\build.properties
