--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@
 /EjerciciosRepaso/EjRepasoT1/nbproject/private/
 /EjerciciosRepaso/JavaApplication9/nbproject/private/
 /EjerciciosRepaso/JavaApplication9/build/
+/EjercicioRepasoT2/nbproject/private/
+/EjercicioRepasoT2/build/
