--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@
 /EjerciciosRepaso/EjRepasoT1/nbproject/private/
 /EjerciciosRepaso/JavaApplication9/nbproject/private/
 /EjerciciosRepaso/JavaApplication9/build/
+/Prueba_T3/nbproject/private/
+/PruebaT3/nbproject/private/
