--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,11 @@
 /EjercicioRepasoT2/nbproject/private/
 /EjercicioRepasoT2/build/
 /PruebaT3/build/
+/ServidorPrueba/nbproject/private/
+/SocketPrueba/nbproject/private/
+/ServidorPrueba/build/
+/SocketPrueba/build/
+/ServerSocketEjercicio1/nbproject/private/
+/SocketEjercicio1/nbproject/private/
+/ServerSocketEjercicio1/build/
+/SocketEjercicio1/build/
