--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@
 /SocketEjercicio1/nbproject/private/
 /ServerSocketEjercicio1/build/
 /SocketEjercicio1/build/
+/Ejercicio2Server/nbproject/private/
+/Ejercicio2Cliente/nbproject/private/
+/Ejercicio2Server/build/
+/Ejercicio2Cliente/build/
+/Ejercicio3Servidor/nbproject/private/
+/Ejercicio3Cliente/nbproject/private/
