--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@
 /Ejercicio2Cliente/build/
 /Ejercicio3Servidor/nbproject/private/
 /Ejercicio3Cliente/nbproject/private/
+/Ejercicio3Servidor/build/
+/Ejercicio3Cliente/build/
