--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@
 /Ejercicio2Cliente/build/
 /Ejercicio3Servidor/nbproject/private/
 /Ejercicio3Cliente/nbproject/private/
+/EjerciciosRepaso/Ejercicio4Servidor/nbproject/private/
+/Ejercicio4Cliente/nbproject/private/
+/Ejercicio4Servidor/build/
+/Ejercicio4Cliente/build/
