--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,9 @@
 /Ejercicio4Cliente/nbproject/private/
 /Ejercicio4Servidor/build/
 /Ejercicio4Cliente/build/
+/Ejercicio5Cliente/nbproject/private/
+/Ejercicio5Server/nbproject/private/
+/Ejercicio6Cliente/nbproject/private/
+/Ejercicio6Server/nbproject/private/
+/Ejercicio6Server/build/
+/Ejercicio6Cliente/build/
