--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,8 @@
 /Ejercicio6Server/nbproject/private/
 /Ejercicio6Server/build/
 /Ejercicio6Cliente/build/
+/Ejercicio7Cliente/nbproject/private/
+/Ejercicio7Server/nbproject/private/
+/Ejercicio10ClienteComensal/nbproject/private/
+/Ejercicio10ClienteRestaurante/nbproject/private/
+/Ejercicio10Server/nbproject/private/
