--- a/Ejercicio10Server/nbproject/project.properties
+++ b/Ejercicio10Server/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Ejercicio10Server.jar
+dist.jar=${dist.dir}/Ejercicio10.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Ejercicio10Server
+dist.jlink.output=${dist.jlink.dir}/Ejercicio10
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Ejercicio10Server
+jlink.launcher.name=Ejercicio10
 main.class=ejercicio10server.Ejercicio10Server
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
