--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@
 /Ejercicio10ClienteComensal/nbproject/private/
 /Ejercicio10ClienteRestaurante/nbproject/private/
 /Ejercicio10Server/nbproject/private/
+/Ejercicio1RepasoPSP/target/
+/Ejercicio2RepasoPSP/target/
